# edumints-scorm-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.az.md  README.es.md  README.kk.md  README.ky.md  README.md  README.ru.md  README.tr.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml  server.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: agent-guardrails.yml  ci.yml  deps-report.yml  docs-sync.yml
auth/: __init__.py  errors.py  keys.py  oauth.py  ssrf.py
components/: __init__.py  renderer.py  templates.py  video_compiler.py
components/branching/: __init__.py
components/engine/: adaptive.js  eventbus.js  rng.js  rules.js  state.js  xapi.js
components/interactions/: __init__.py
components/quiz/: __init__.py
components/slides/: __init__.py
core/: __init__.py  antislop.py  engine_bundle.py  game_primitives.py  manifest.py  media.py  packager.py  project.py  schema_validate.py  store.py  tts.py  validator.py  video.py  video_render.py
core/integrations/: base.py  generative_svg.py  openverse.py  wikimedia.py
docs/: ARCHITECTURE.md  CONFORMANCE.md  DEVICE-COMPATIBILITY.md  GAME-A11Y.md  GAME-ADAPTIVE.md  GAME-ANTISLOP.md  GAME-ECD.md  GAME-PATTERNS.md  GAME-XAPI.md  LMS-INTEGRATION.md  SCREEN_TYPES.md  SECURITY-FINDINGS.md
examples/: README.txt  rich.en.json  rich.json  small.en.json  small.json
examples/corporate/: onboarding.json
examples/games/: adaptive-statistics.tr.json  clinic-triage-game.tr.json  customer-deescalation.tr.json  escape-cipher-game.tr.json  phishing-decision.tr.json  (+1 more)
runtime/: README.txt
tests/: README.md  __init__.py  conftest.py  test_conformance.py  test_games.py  test_golden.py  test_integrations.py  test_integrations_sources.py  test_themes.py  test_timeline_cues.mjs  test_tts.py  test_units.py  test_video.py
themes/: academic.json  agency.json  boardroom-clinic.json  clinical-calm.json  dark.json  default.json  editorial.json  high-contrast.json  modern-light.json  playground.json  quest-bright.json  warm-education.json
tools/: local_media.py  manage_keys.py
(+42 files in other folders)
