[project]
name = "scorm-mcp"
version = "0.1.0"
description = "MCP server that assembles interactive, SCORM-compliant training packages (HTML5 + scorm-again runtime). Author = Claude, assembler = server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "edumints" }]

dependencies = [
    "fastmcp>=2.0",          # FastMCP server (Streamable HTTP transport)
    "pydantic>=2.6",         # v1.x veri modeli / spec şemaları
    "aiosqlite>=0.20",       # event-loop'u bloklamayan SQLite (WAL)
    "nh3>=0.2",              # HTML sanitizasyonu (ammonia binding) — *_html beyaz liste
    "httpx>=0.27",           # add_asset URL fetch (SSRF guard ile)
    "python-ulid>=2.2",      # proj_/scr_/asset_/pkg_/job_ ID üretimi
    "jinja2>=3.1",           # renderer şablonları (components/)
    "lxml>=5.0",             # imsmanifest.xml üretimi + validate
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",   # CI güvenlik ağı: hiçbir test asılı kalmasın (per-test sınır)
    "ruff>=0.4",
    "mcp[cli]>=1.0",         # MCP Inspector / istemci testleri
]
tts = [
    "piper-tts>=1.4",        # Faz 11 — dahili Türkçe TTS (onnxruntime; opt-in/ağır)
]

[project.scripts]
scorm-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Modüller proje-adıyla aynı isimde tek paket altında değil (core/, components/, auth/ + server.py
# kökte). Hatch'e wheel içeriğini açıkça bildir. (Konteyner CMD'si /app kaynağından çalışır;
# bu yapılandırma yalnız `pip install .`'in bağımlılıkları kurup metadata üretebilmesi içindir.)
[tool.hatch.build.targets.wheel]
packages = ["core", "components", "auth"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Güvenlik ağı: hiçbir test 90sn'yi aşmasın (CI'da 6h hang yerine fail-fast + hangi test belli olsun).
timeout = 90
timeout_method = "signal"

[tool.ruff]
line-length = 100
target-version = "py311"
